<resources>
    <string name="app_name">TSMC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_valid_email">Enter Your Valid Email</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="forget_pwd">Forget Password</string>
</resources>